# ngn

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  Makefile  demo.cpp  main.cpp  makeflags.sh  windowsbuils.sh
engine/: CMakeLists.txt  engine.cpp  engine.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  scene.h  utils.cpp  utils.h  vk_types.h
include/: datatypes.h
include/components/: instancer.h  networkid.h  render_comp.h  tags.h  transform.h  translation.h  velocity.h
include/configuration/: global.h
include/engine/: camera.h  engine.h  entities.h  glft_object.h  mesh.h  pipeline.h  scene.h  system.h  systems.h  time.h
include/engine/rendering/: renderer.h  vulkanInitilizers.h
include/logging/: logger.h
include/networking/: client.h  rpc.h  server.h  transport.h
include/rendering/: renderer.h
include/server/: networkid.h  players.h
include/systems/: systems.h
models/: ship.gltf
protobufs/: .rpc.proto.swp  CMakeLists.txt  debugging.proto  input.proto  msgs.proto  rpc.proto  snapshot.proto
shaders/: Makefile  basic.frag  basic.vert  test.vert
srcs/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
srcs/engine/: CMakeLists.txt  camera.cpp  engine.cpp  entities.cpp  glft_object.cpp  pipeline.cpp  time.cpp
srcs/engine/rendering/: CMakeLists.txt  pipeline.cpp  renderer.cpp
srcs/networking/: CMakeLists.txt  client.cpp  server.cpp  transport.cpp
srcs/protobufs/: CMakeLists.txt
srcs/rendering/: renderer.cpp
srcs/server/: CMakeLists.txt  networkid.cpp  players.cpp
srcs/systems/: CMakeLists.txt  camera.cpp  instancer.cpp  networking.cpp  rendering.cpp  systems.cpp
srcs/systems/client/: camera.cpp  input.cpp  instancer.cpp  networking.cpp  rendering.cpp
srcs/systems/common/: systems.cpp  velocity.cpp
srcs/systems/server/: debugging.cpp  networking.cpp
srcs/utils/: CMakeLists.txt  file.cpp
tests/: networking.cpp
