find_package(Protobuf REQUIRED FATAL_ERROR)
file(GLOB ProtoFiles "*.proto")
include_directories(${Protobuf_INCLUDE_DIRS})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${ProtoFiles})
protobuf_generate_python(PROTO_SRCS_PY ${ProtoFiles})
add_library(messages ${PROTO_SRCS} ${PROTO_SRCS_PY})
target_link_libraries(messages ${Protobuf_LIBRARIES})
